# refx-research-manager

./: .gitignore  README.md  app-tour-known-issue.md  fix-auto-search-metadata.diff  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo
.github/workflows/: build-macos-x86.yml  build-macos.yml  build-windows.yml  release-desktop.yml  release-macos-universal.yml  release-platform.yml  release-windows.yml
app/: globals.css  layout.tsx  page.tsx
app/comments/: page.tsx
app/discover/: page.tsx
app/documents/: page.tsx
app/libraries/: page.tsx
app/maps/: page.tsx
app/metadata/: page.tsx
app/notes/: page.tsx
app/reader/: page.tsx
app/references/: page.tsx
app/reports/: page.tsx
app/search/: page.tsx
docs/: desktop-release.md
lib/: app-settings.ts  app-tour.ts  app-version.ts  db-client.ts  file-service.ts  home-dashboard.ts  library-colors.ts  library-icons.tsx  localization.tsx  remote-storage-state.ts  store.ts  tauri-api.ts  types.ts
scripts/: ensure-tauri-icons.mjs  generate-macos-icns.sh  generate-release-manifest.mjs  generate-updater-manifest.mjs  package-macos-universal.sh  release-version.mjs  sync-tesseract-assets.mjs  tauri-build-updater.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial_schema.sql
src-tauri/src/: commands.rs  lib.rs  main.rs  remote_vault.rs
types/: pdfjs-build.d.ts
word-addin/: DEPLOYMENT.md  README.md  manifest.production.xml  manifest.xml  package.json  vite.config.ts
(+95 files in other folders)
